--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij
+
+# Local Netlify folder
+.netlify
